--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,20 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.webprog26.alarmapp.MainActivity">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/alarmsList"
-        android:layout_above="@+id/btnAddSignal"/>
+        android:id="@+id/alarmsRecyclerView"
+        android:layout_above="@+id/btnAddAlarm"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnAddSignal"
-        android:text="@string/add_new_signal"
+        android:id="@+id/btnAddAlarm"
+        android:text="@string/add_new_alarm"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
