--- a/app/src/main/res/layout/alarms_list_item.xml
+++ b/app/src/main/res/layout/alarms_list_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,6 +27,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/swAlarmState"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/middleAlarmView"
+            android:layout_below="@+id/topAlarmView"
+            android:layout_marginTop="@dimen/alarm_item_view_vertical_margin">
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btnDeleteAlarm"
+                android:background="@android:color/transparent"
+                android:src="@android:drawable/ic_menu_delete"
+                android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
     </RelativeLayout>
