--- a/app/src/main/res/layout/alarms_list_item.xml
+++ b/app/src/main/res/layout/alarms_list_item.xml
@@ -44,5 +44,56 @@
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/bottomAlarmView"
+            android:layout_below="@+id/middleAlarmView">
+            <CheckBox
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/chbRepeatAlarm"
+                android:text="@string/repeat"
+                android:textAppearance="?android:attr/textAppearanceButton"/>
+            <include layout="@layout/days_layout"
+                android:id="@+id/daysView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/chbRepeatAlarm"
+                android:layout_marginTop="@dimen/alarm_item_view_vertical_margin"
+                android:layout_marginBottom="@dimen/alarm_item_view_vertical_margin"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/daysView">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/llMelodyChooser"
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        android:layout_alignParentLeft="true">
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:src="@android:drawable/presence_audio_online"
+                            android:layout_gravity="center_vertical"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:text="melody"
+                            android:paddingLeft="@dimen/alarm_item_view_horizontal_margin"/>
+                    </LinearLayout>
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/chbVibrationOn"
+                        android:layout_alignParentRight="true"
+                        android:text="@string/vibration"
+                        android:textAppearance="?android:attr/textAppearanceButton"/>
+                </RelativeLayout>
+        </RelativeLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
