--- a/app/src/main/res/layout/alarms_list_item.xml
+++ b/app/src/main/res/layout/alarms_list_item.xml
@@ -34,7 +34,22 @@
             android:layout_height="wrap_content"
             android:id="@+id/middleAlarmView"
             android:layout_below="@+id/topAlarmView"
-            android:layout_marginTop="@dimen/alarm_item_view_vertical_margin">
+            android:layout_marginTop="@dimen/alarm_item_view_vertical_margin"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/btnShowAlarmOptions"
+                android:layout_marginRight="20dp"
+                android:src="@android:drawable/arrow_down_float"
+                android:background="@android:color/transparent"
+                android:layout_centerVertical="true"/>
+            <include layout="@layout/small_days_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/smallActiveDaysList"
+                android:layout_toRightOf="@+id/btnShowAlarmOptions"
+                android:layout_centerVertical="true"/>
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,7 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/bottomAlarmView"
-            android:layout_below="@+id/middleAlarmView">
+            android:layout_below="@+id/middleAlarmView"
+            android:visibility="gone">
             <CheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -65,7 +81,8 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/daysView">
+                    android:layout_below="@+id/daysView"
+                    android:id="@+id/bottomControls">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -94,6 +111,16 @@
                         android:text="@string/vibration"
                         android:textAppearance="?android:attr/textAppearanceButton"/>
                 </RelativeLayout>
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/btnHideAlarmOptions"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:src="@android:drawable/arrow_up_float"
+                android:background="@android:color/transparent"
+                android:layout_centerVertical="true"
+                android:layout_below="@+id/bottomControls"
+                android:layout_marginTop="@dimen/activity_vertical_margin" />
         </RelativeLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
